# evaos-desktop-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.woodpecker/: bridge-python.yml
docs/: actionable-task-launcher-2026-06-02.md  announcement-queue.md  app-server-read-seam.md  approval-center-contract.md  business-browser-home-status-2026-06-02.md  capability-manifest.md  claude-desktop-spike.md  codeql-ci-policy.md  codex-worker-architecture.md  computer-use-helper-ipc.md  creative-studio-hosted-comfyui-design-gate.md  customer-mac-connector.md  desktop-control-engine-v2.md  eva-desktop-packaging.md  eva-desktop-workbench-adr.md  eva-desktop-workbench-sprint.md  evaos-workbench-agent-control-safety.md  evaos-workbench-beta-release.md  evaos-workbench-broken-release-recovery.md  evaos-workbench-build-release-runbook.md  evaos-workbench-customer-install-update.md  evaos-workbench-mac-iphone-pairing.md  evaos-workbench-oss-integration.md  evaos-workbench-qa-canary.md  evaos-workbench-release-checklist.md  evaos-workbench-v050-one-app-expansion.md  issue-completion-matrix.md  mac-control-next-phase.md  macos-permissions.md  openclaw-plugin.md  opendesign-gateway.md  plan-evaos-desktop-bridge.md  report-cli-anything-install-2026-05-02.md  research-happy-patterns-2026-05-02.md  session-center-agent-workspace-contract.md  smb-command-center-v1-architecture.md  snapshot-schema.md  support-vm-mac-iphone-codex-canary.md  threat-model.md  visible-smb-feature-restoration-2026-06-02.md
hermes-adapter/: README.md
(+102 files in other folders)
