[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evaos-desktop-bridge"
version = "0.1.0"
description = "Safe read-only bridge for visible desktop agent surfaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ElectricSheep" }
]

[project.scripts]
evaos-desktop-bridge = "evaos_desktop_bridge.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
gui = [
  "pyobjc-framework-Quartz>=12.0",
  "pyobjc-framework-ApplicationServices>=12.0",
  "pyautogui>=0.9.54",
  "pynput>=1.8",
]
