[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evaos-desktop-bridge"
version = "0.1.0"
description = "evaOS Workbench connector for audited Mac and iPhone agent control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ElectricSheep" }
]

[project.scripts]
evaos-desktop-bridge = "evaos_desktop_bridge.cli:entrypoint"
evaos-desktop-bridge-qa-canary = "evaos_desktop_bridge.qa_canary:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
gui = [
  "pyobjc-framework-Quartz>=12.0",
  "pyobjc-framework-ApplicationServices>=12.0",
  "pyautogui>=0.9.54",
  "pynput>=1.8",
]
